--- a/index.html
+++ b/index.html
@@ -18,20 +18,23 @@
   <body>
     <main id="content">
       <nav>
-        <span><strong><a href="#">euCHICO</a></strong></span>
+        <h1><a href="#">euCHICO</a></h1>
 
-        <!-- <ul>
+         <!-- <ul>
           <li><a href="#">curriculum</a></li>
           <li><a href="#">blog</a></li>
           <li><a href="#">contato</a></li>
         </ul> -->
       </nav>
 
-      <div id="title">
-        <h1 id="titleMain"></h1>
-        <h2 id="titleQuote"></h2>
+      <div class="row h-75">
+        <div class="col-sm-12 my-auto">
+              <div id="title">
+                <h2 id="titleMain"></h2>
+                <h3 id="titleQuote"></h3>
+              </div>
+        </div>
       </div>
-
     </main>
 
     <!-- SCRIPTs -->
