Finalização do Menu

--- a/index.html
+++ b/index.html
@@ -17,14 +17,20 @@
   </head>
   <body>
     <main id="content">
-      <nav>
-        <h1><a href="#">euCHICO</a></h1>
+      <nav class="navbar navbar-expand-md navbar-dark" id="navagation">
+        <a class="abs" href="#">  <h1>euCHICO</h1></a>
 
-         <!-- <ul>
-          <li><a href="#">curriculum</a></li>
-          <li><a href="#">blog</a></li>
-          <li><a href="#">contato</a></li>
-        </ul> -->
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsingNavbar">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="navbar-collapse collapse" id="collapsingNavbar">
+          <ul class="navbar-nav ml-auto">
+            <li class="nav-item"><a class="nav-link" href="#">curriculum</a></li>
+            <li class="nav-item"><a class="nav-link" href="#">blog</a></li>
+            <li class="nav-item"><a class="nav-link" href="#">contato</a></li>
+          </ul>
+        </div>
       </nav>
 
       <div id="title" >
