Finalização do Menu

--- a/index.html
+++ b/index.html
@@ -13,12 +13,18 @@
     <!-- FONTs -->
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,900&display=swap" rel="stylesheet">
 
-    <title>euChico</title>
+    <!-- SCRIPTs -->
+    <script type="text/javascript" src="scripts/jquery-3.4.1.min.js"></script>
+    <script type="text/javascript" src="scripts/bootstrap.min.js"></script>
+    <script type="text/javascript" src="scripts/typed.js"></script>
+    <script type="text/javascript" src="scripts/script-home.js"></script>
+
+    <title>euChico - Francisco de Paula</title>
   </head>
   <body>
-    <main id="content">
-      <nav class="navbar navbar-expand-md navbar-dark" id="navagation">
-        <a class="abs" href="#">  <h1>euCHICO</h1></a>
+    <main id="contentHome" class="colorPrimary">
+      <nav class="navbar navbar-expand-sm navbar-dark" id="navagation">
+        <a class="abs" href="#"><h1 class="colorPrimary">euCHICO</h1></a>
 
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsingNavbar">
           <span class="navbar-toggler-icon"></span>
@@ -26,9 +32,9 @@
 
         <div class="navbar-collapse collapse" id="collapsingNavbar">
           <ul class="navbar-nav ml-auto">
-            <li class="nav-item"><a class="nav-link" href="#">curriculum</a></li>
-            <li class="nav-item"><a class="nav-link" href="#">blog</a></li>
-            <li class="nav-item"><a class="nav-link" href="#">contato</a></li>
+            <li class="nav-item"><a class="nav-link colorPrimary" href="curriculum.html">curriculum</a></li>
+            <li class="nav-item"><a class="nav-link colorPrimary" href="#">blog</a></li>
+            <li class="nav-item"><a class="nav-link colorPrimary" href="#">contato</a></li>
           </ul>
         </div>
       </nav>
@@ -39,10 +45,6 @@
       </div>
     </main>
 
-    <!-- SCRIPTs -->
-    <script type="text/javascript" src="scripts/jquery-3.4.1.min.js"></script>
-    <script type="text/javascript" src="scripts/bootstrap.min.js"></script>
-    <script type="text/javascript" src="scripts/typed.js"></script>
-    <script type="text/javascript" src="scripts/script.js"></script>
+
   </body>
 </html>
