--- a/index.html
+++ b/index.html
@@ -6,18 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- STYLEs -->
-    <link rel="stylesheet" href="styles/normalize.css">
-    <link rel="stylesheet" href="styles/bootstrap.min.css">
-    <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" type="text/css" href="styles/normalize.css">
+    <link rel="stylesheet" type="text/css" href="styles/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="styles/style.css">
 
     <!-- FONTs -->
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,900&display=swap" rel="stylesheet">
-
-    <!-- SCRIPTs -->
-    <script type="text/javascript" src="scripts/jquery-3.4.1.min.js"></script>
-    <script type="text/javascript" src="scripts/bootstrap.min.js"></script>
-    <script type="text/javascript" src="scripts/typed.js"></script>
-    <script type="text/javascript" src="scripts/script-home.js"></script>
 
     <title>euChico - Francisco de Paula</title>
   </head>
@@ -45,6 +39,10 @@
       </div>
     </main>
 
-
+    <!-- SCRIPTs -->
+    <script type="text/javascript" src="scripts/jquery-3.4.1.min.js"></script>
+    <script type="text/javascript" src="scripts/bootstrap.min.js"></script>
+    <script type="text/javascript" src="scripts/typed.js"></script>
+    <script type="text/javascript" src="scripts/script-home.js"></script>
   </body>
 </html>
