--- a/curriculum.html
+++ b/curriculum.html
@@ -6,18 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- STYLEs -->
-    <link rel="stylesheet" href="styles/normalize.css">
-    <link rel="stylesheet" href="styles/bootstrap.min.css">
-    <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" type="text/css" href="styles/normalize.css">
+    <link rel="stylesheet" type="text/css" href="styles/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="styles/style.css">
+
+    <!-- PRIORITY SCRIPTs -->
+    <script type="text/javascript" src="https://kit.fontawesome.com/2afad5831f.js"></script>
 
     <!-- FONTs -->
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,900&display=swap" rel="stylesheet">
-
-    <!-- SCRIPTs -->
-    <script type="text/javascript" src="scripts/jquery-3.4.1.min.js"></script>
-    <script type="text/javascript" src="scripts/bootstrap.min.js"></script>
-    <script src="https://kit.fontawesome.com/2afad5831f.js"></script>
-    <script type="text/javascript" src="scripts/script-curriculum.js"></script>
 
     <title>euChico - Curriculum</title>
   </head>
@@ -41,7 +38,7 @@
 
       <div class="container">
         <div class="row">
-          <div class="col-xs-5  col-md-5">
+          <div class="col-lg-5 areaCard">
             <div id="card">
               <div class="avatar"><img src="images/avatar.jpg" alt=""></div>
 
@@ -50,11 +47,12 @@
               <h3>Desenvolvedor Web</h3>
 
               <ul class="list-unstyled">
-                <li class="list-inline-item"><a href="#"><i class="fa fa-github"></i></a></li>
-                <li class="list-inline-item"><a href="#"><i class="fa fa-twitter"></i></a></li>
-                <li class="list-inline-item"><a href="#"><i class="fa fa-instagram"></i></a></li>
+                <li class="list-inline-item"><a href="https://github.com/euchico" target="_blank"><i class="fab fa-github-square"></i></a></li>
+                <li class="list-inline-item"><a href="https://www.linkedin.com/in/euchico" target="_blank"><i class="fab fa-linkedin"></i></a></li>
+                <li class="list-inline-item"><a href="https://twitter.com/_euchico" target="_blank"><i class="fab fa-twitter-square"></i></a></li>
               </ul>
             </div>
+
             <div id="download">
               <a href="files/curriculum.pdf" download>
                 <button type="button" class="btn btn-secondary btn-sm rounded-0">
@@ -64,29 +62,119 @@
             </div>
           </div>
 
-          <div class="col-xs-7 col-md-7">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+          <div class="col-lg-7">
+            <section class="areaCurriculum">
+              <h2>Sobre Mim</h2>
 
+              <strong>Olá Mundo!</strong>
+              <p>
+                Sou um grande entusiasta de Programação e Desenvolvimento Web.
+                Curso Licenciatura em Matemática no IFRJ, cursei Ciência da Computação na UERJ (não concluído) e, além disso, realizo muitos estudos independentes.
+                Sempre tive interesse em matemática, lógica e programação, encontrei a paixão pelos processos e modos de pensar dentro dessas áreas.
+                Ampliei a minha visão através do contato com outros campos, como design e arte, mas tudo unido para o meu desenvolvimento pessoal e profissional.
+              </p>
+
+              <hr>
+
+              <h3>Informações Pessoais</h3>
+
+              <div class="row">
+                <div class="col-lg-6">
+                  <ul class="list-unstyled">
+                    <li><strong>Nome:</strong> Francisco de Paula</li>
+                    <li><strong>Idade:</strong> 29 anos</li>
+                    <li><strong>Endereço:</strong> Mesquita, RJ/Brasil</li>
+                  </ul>
+                </div>
+
+                <div class="col-lg-6">
+                  <ul class="list-unstyled">
+                    <li><strong>Telefone:</strong> (21) 99716-4318 </li>
+                    <li><strong>E-mail:</strong> eu.francisco@outlook.com</li>
+                    <li><strong>Freelance:</strong> <i class="fas fa-check-circle colorSecondary"></i> Disponível</li>
+                  </ul>
+                </div>
+              </div>
+            </section>
+
+            <section class="areaCurriculum">
+              <h2>Experiências</h2>
+
+              <div id="collapseInformation" class="">
+                <a href="#collapseDetail1" class="d-block h-100" data-toggle="collapse" data-parent="#collapseInformation">
+                  <span class="float-left collapseDate"><strong>2013 - 2014</strong></span>
+
+                  <div class="d-inline-block collapseTitle">
+                    <h4>Vento Consulting </h4>
+                    <span>
+                      <strong>Estágio em Front-End</strong></span>
+                  </div>
+                  <i class="float-right my-auto h-100 glyphicon fas fa-2x fa-angle-down"></i>
+                </a>
+
+                <div class="collapse" id="collapseDetail1">
+                  <p class="pt-2">
+                    Minhas principais responsabilidades envolviam desenvolvimento front-end (HTML, CSS e Javascript), criação de templates e manutenção de sites em Wordpress, criação de layout para sistemas web e criação/edição de imagens.
+                    Além disso, participava diretamente das várias etapas de idealização e desenvolvimento dos projetos.
+                  </p>
+                </div>
+              </div>
+
+              <div id="collapseInformation" class="">
+                <a href="#collapseDetail2" class="d-block h-100" data-toggle="collapse" data-parent="#collapseInformation">
+                  <span class="float-left collapseDate"><strong>2011 - 2013</strong></span>
+
+                  <div class="d-inline-block collapseTitle">
+                    <h4>UERJ</h4>
+                    <span>
+                      <strong>Iniciação Científica em Computação Gráfica</strong></span>
+                  </div>
+                  <i class="float-right my-auto h-100 glyphicon fas fa-2x fa-angle-down"></i>
+                </a>
+
+                <div class="collapse" id="collapseDetail2">
+                  <p class="pt-2">
+                    Pesquisa de iniciação científica focada na área de Visão Computacional e interpretação de dados obtidos por Sensoriamento Remoto.
+                    Projeto realizado em C++ tinha com objetivo, além da pesquisa, retomar o desenvolvimento e atualização o software InterIMAGE.
+                  </p>
+                </div>
+              </div>
+
+              <div id="collapseInformation" class="">
+                <a href="#collapseDetail3" class="d-block h-100" data-toggle="collapse" data-parent="#collapseInformation">
+                  <span class="float-left collapseDate"><strong>2010 - 2011</strong></span>
+
+                  <div class="d-inline-block collapseTitle">
+                    <h4>UERJ</h4>
+                    <span>
+                      <strong>Desenvolvimento e Suporte</strong></span>
+                  </div>
+                  <i class="float-right my-auto h-100 glyphicon fas fa-2x fa-angle-down"></i>
+                </a>
+
+                <div class="collapse" id="collapseDetail3">
+                  <p class="pt-2">
+                    Focado em divulgar o Software Livre, minha tarefa foi criar uma remasterização do Linux voltada para meio acadêmico.
+                    Dei suporte ao laboratório do setor de Computação nos assuntos relacionados ao sistema Linux.
+                    Também ministrei aulas sobre Software Livre e instalação/uso do Linux para os alunos interessados no tema.
+                  </p>
+                </div>
+              </div>
+            </section>
+
+            <!--
+            <section class="areaCurriculum">
+              <h2>Formação</h2>
+            </section>
+            -->
           </div>
         </div>
       </div>
     </main>
+
+    <!-- SCRIPTs -->
+    <script type="text/javascript" src="scripts/jquery-3.4.1.min.js"></script>
+    <script type="text/javascript" src="scripts/bootstrap.min.js"></script>
+    <script type="text/javascript" src="scripts/script-curriculum.js"></script>
   </body>
 </html>
