--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
 
     <title>euChico - Francisco de Paula</title>
   </head>
-  <body>
-    <main id="contentHome" class="colorPrimary">
-      <nav class="navbar navbar-expand-sm navbar-dark" id="navagation">
-        <a class="abs" href="#"><h1 class="colorPrimary">euCHICO</h1></a>
+  <body id="home">
+    <main id="contentHome" class="p-3">
+      <nav class="navbar navbar-expand-sm navbar-dark mb-4 p-0" id="navagation">
+        <a class="abs" href="#"><h1 class="m-0">euCHICO</h1></a>
 
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsingNavbar">
           <span class="navbar-toggler-icon"></span>
@@ -27,15 +27,15 @@
         <div class="navbar-collapse collapse" id="collapsingNavbar">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item"><a class="nav-link colorPrimary" href="curriculum.html">curriculum</a></li>
-            <li class="nav-item"><a class="nav-link colorPrimary" href="#">blog</a></li>
-            <li class="nav-item"><a class="nav-link colorPrimary" href="#">contato</a></li>
+            <!-- <li class="nav-item"><a class="nav-link colorPrimary" href="#">blog</a></li>
+            <li class="nav-item"><a class="nav-link colorPrimary" href="#">contato</a></li> -->
           </ul>
         </div>
       </nav>
 
       <div id="title" >
-        <h3 id="titleQuote"></h3>
-        <h2 id="titleMain"></h2>
+        <h3 id="titleQuote" class="m-0"></h3>
+        <h2 id="titleMain" class="m-0"></h2>
       </div>
     </main>
 
@@ -43,6 +43,6 @@
     <script type="text/javascript" src="scripts/jquery-3.4.1.min.js"></script>
     <script type="text/javascript" src="scripts/bootstrap.min.js"></script>
     <script type="text/javascript" src="scripts/typed.js"></script>
-    <script type="text/javascript" src="scripts/script-home.js"></script>
+    <script type="text/javascript" src="scripts/script.js"></script>
   </body>
 </html>
