--- a/curriculum.html
+++ b/curriculum.html
@@ -70,7 +70,7 @@
               <p>
                 Sou um grande entusiasta de Programação e Desenvolvimento Web.
                 Curso Licenciatura em Matemática no IFRJ, cursei Ciência da Computação na UERJ (não concluído) e, além disso, realizo muitos estudos independentes.
-                Sempre tive interesse em matemática, lógica e programação, encontrei a paixão pelos processos e modos de pensar dentro dessas áreas.
+                Sempre tive interesse em matemática, lógica, programação e encontrei a paixão pelos processos e modos de pensar dentro dessas áreas.
                 Ampliei a minha visão através do contato com outros campos, como design e arte, mas tudo unido para o meu desenvolvimento pessoal e profissional.
               </p>
 
@@ -103,7 +103,7 @@
               <div id="collapseInformation" class="">
                 <a href="#collapseDetail1" class="d-block h-100" data-toggle="collapse" data-parent="#collapseInformation">
                   <div class="row no-gutters">
-                    <div class="col-sm-3 d-none d-sm-block">
+                    <div class="col-sm-4 d-none d-sm-block">
                       <span class="float-left collapseDate"><strong>2013 - 2014</strong></span>
                     </div>
                     <div class="col-10 col-sm-7">
@@ -113,7 +113,7 @@
                           <strong>Estágio em Front-End</strong></span>
                       </div>
                     </div>
-                    <div class="col-2 col-sm-2">
+                    <div class="col-2 col-sm-1">
                       <i class="float-right my-auto h-100 glyphicon fas fa-2x fa-angle-down"></i>
                     </div>
                   </div>
@@ -130,7 +130,7 @@
               <div id="collapseInformation" class="">
                 <a href="#collapseDetail2" class="d-block h-100" data-toggle="collapse" data-parent="#collapseInformation">
                   <div class="row no-gutters">
-                    <div class="col-sm-3 d-none d-sm-block">
+                    <div class="col-sm-4 d-none d-sm-block">
                       <span class="float-left collapseDate"><strong>2011 - 2013</strong></span>
                     </div>
 
@@ -142,7 +142,7 @@
                       </div>
                     </div>
 
-                    <div class="col-2 col-sm-2">
+                    <div class="col-2 col-sm-1">
                       <i class="float-right my-auto h-100 glyphicon fas fa-2x fa-angle-down"></i>
                     </div>
                   </div>
@@ -151,7 +151,7 @@
                 <div class="collapse" id="collapseDetail2">
                   <p class="pt-2">
                     Pesquisa de iniciação científica focada na área de Visão Computacional e interpretação de dados obtidos por Sensoriamento Remoto.
-                    Projeto realizado em C++ tinha com objetivo, além da pesquisa, retomar o desenvolvimento e atualização o software InterIMAGE.
+                    Além da pesquisa dentro do tema proposto, o projeto realizado em C++ tinha com objetivo retomar o desenvolvimento e atualização o software InterIMAGE.
                   </p>
                 </div>
               </div>
@@ -159,7 +159,7 @@
               <div id="collapseInformation" class="">
                 <a href="#collapseDetail3" class="d-block h-100" data-toggle="collapse" data-parent="#collapseInformation">
                   <div class="row no-gutters">
-                    <div class="col-sm-3 d-none d-sm-block">
+                    <div class="col-sm-4 d-none d-sm-block">
                       <span class="float-left collapseDate"><strong>2010 - 2011</strong></span>
                     </div>
 
@@ -171,7 +171,7 @@
                       </div>
                     </div>
 
-                    <div class="col-2 col-sm-2">
+                    <div class="col-2 col-sm-1">
                       <i class="float-right my-auto h-100 glyphicon fas fa-2x fa-angle-down"></i>
                     </div>
                   </div>
@@ -180,8 +180,8 @@
                 <div class="collapse" id="collapseDetail3">
                   <p class="pt-2">
                     Focado em divulgar o Software Livre, minha tarefa foi criar uma remasterização do Linux voltada para meio acadêmico.
-                    Dei suporte ao laboratório do setor de Computação nos assuntos relacionados ao sistema Linux.
-                    Também ministrei aulas sobre Software Livre e instalação/uso do Linux para os alunos interessados no tema.
+                    Além disso, dei suporte ao laboratório de computação nos assuntos relacionados ao sistema operacional Linux.
+                    Também ministrei aulas sobre Software Livre e instalação/uso do Linux para os alunos de um “cursos” livre.
                   </p>
                 </div>
               </div>
@@ -213,8 +213,8 @@
 
                 <div class="collapse" id="collapseDetail4">
                   <p class="pt-2">
-                    Para estar realmente atualizado e evoluindo no Desenvolvimento Web, ou qualquer área de conhecimento, é fundamental realizar estudos pessoais e criar projetos.
-                    Minha trajetória de estudo, fora de salas de aula, está sendo compartilhada no GitHub (<strong><a href="https://github.com/euchico/webdev" target="_blank">LINK</a></strong>).
+                    Para estar realmente atualizado e evoluindo no Desenvolvimento Web, ou qualquer área de conhecimento, é fundamental a criação de projetos e realização estudos pessoais.
+                    Minha trajetória de estudo fora das salas de aula será, sempre que possível, compartilhada no <strong><a href="https://github.com/euchico/webdev" target="_blank">GitHub</a></strong> e no <strong><a href="https://medium.com/@euchico" target="_blank">Medium</a></strong>.
                   </p>
                 </div>
               </div>
@@ -241,8 +241,8 @@
 
                 <div class="collapse" id="collapseDetail5">
                   <p class="pt-2">
-                    Curso essencial para desenvolver meu conhecimento matemático e ir além do conhecimento meramente técnico.
-                    Um curso fundamental para expansão da visão de mundo através da educação matemática, que é a área importantíssima.
+                    Curso fundamental para ampliar a minha visão de mundo unindo a área técnica da Matemática e o olhar humano da Educação.
+                    São inúmeras as conexões entre da Ciência Computação e Licenciatura em Matemática, e meu desejo é conseguir compreendê-las e levar para minha prática profissional.
                   </p>
                 </div>
               </div>
@@ -269,7 +269,7 @@
 
                 <div class="collapse" id="collapseDetail6">
                   <p class="pt-2">
-                    Faculdade que me possibilitou obter um conhecimento muito bom nos diversos campos da Computação como a programação em vários paradigmas, desenvolvimento de algoritmos, engenharia de software, entre outros, fundamentais para meus estudos e projetos.
+                    Faculdade que me possibilitou obter os fundamentos dos diversos campos da Computação como a programação em vários paradigmas, desenvolvimento e análise de algoritmos, arquitetura e engenharia de software, entre outros conhecimentos importantíssimos para minha atuação hoje.
                   </p>
                 </div>
               </div>
