--- a/curriculum.html
+++ b/curriculum.html
@@ -44,7 +44,7 @@
 
               <h2>Francisco de Paula</h2>
 
-              <h3>Desenvolvedor Web</h3>
+              <h3 class="colorSecondary">Desenvolvedor Web</h3>
 
               <ul class="list-unstyled">
                 <li class="list-inline-item"><a href="https://github.com/euchico" target="_blank"><i class="fab fa-github-square"></i></a></li>
@@ -66,7 +66,7 @@
             <section class="areaCurriculum">
               <h2>Sobre Mim</h2>
 
-              <strong>Olá Mundo!</strong>
+              <strong class="colorSecondary">Olá Mundo!</strong>
               <p>
                 Sou um grande entusiasta de Programação e Desenvolvimento Web.
                 Curso Licenciatura em Matemática no IFRJ, cursei Ciência da Computação na UERJ (não concluído) e, além disso, realizo muitos estudos independentes.
@@ -76,10 +76,10 @@
 
               <hr>
 
-              <h3>Informações Pessoais</h3>
+              <h3 class="colorSecondary">Informações Pessoais</h3>
 
               <div class="row">
-                <div class="col-lg-6">
+                <div class="col-md-6">
                   <ul class="list-unstyled">
                     <li><strong>Nome:</strong> Francisco de Paula</li>
                     <li><strong>Idade:</strong> 29 anos</li>
@@ -87,7 +87,7 @@
                   </ul>
                 </div>
 
-                <div class="col-lg-6">
+                <div class="col-md-6">
                   <ul class="list-unstyled">
                     <li><strong>Telefone:</strong> (21) 99716-4318 </li>
                     <li><strong>E-mail:</strong> eu.francisco@outlook.com</li>
@@ -114,7 +114,7 @@
                       </div>
                     </div>
                     <div class="col-2 col-sm-1">
-                      <i class="float-right my-auto h-100 glyphicon fas fa-2x fa-angle-down"></i>
+                      <i class="float-right my-auto h-100 glyphicon fas fa-2x fa-angle-down colorSecondary"></i>
                     </div>
                   </div>
                 </a>
@@ -143,7 +143,7 @@
                     </div>
 
                     <div class="col-2 col-sm-1">
-                      <i class="float-right my-auto h-100 glyphicon fas fa-2x fa-angle-down"></i>
+                      <i class="float-right my-auto h-100 glyphicon fas fa-2x fa-angle-down colorSecondary"></i>
                     </div>
                   </div>
                 </a>
@@ -172,7 +172,7 @@
                     </div>
 
                     <div class="col-2 col-sm-1">
-                      <i class="float-right my-auto h-100 glyphicon fas fa-2x fa-angle-down"></i>
+                      <i class="float-right my-auto h-100 glyphicon fas fa-2x fa-angle-down colorSecondary"></i>
                     </div>
                   </div>
                 </a>
@@ -206,7 +206,7 @@
                     </div>
 
                     <div class="col-2 col-sm-1">
-                      <i class="float-right my-auto h-100 glyphicon fas fa-2x fa-angle-down"></i>
+                      <i class="float-right my-auto h-100 glyphicon fas fa-2x fa-angle-down colorSecondary"></i>
                     </div>
                   </div>
                 </a>
@@ -234,7 +234,7 @@
                     </div>
 
                     <div class="col-2 col-sm-1">
-                      <i class="float-right my-auto h-100 glyphicon fas fa-2x fa-angle-down"></i>
+                      <i class="float-right my-auto h-100 glyphicon fas fa-2x fa-angle-down colorSecondary"></i>
                     </div>
                   </div>
                 </a>
@@ -262,7 +262,7 @@
                     </div>
 
                     <div class="col-2 col-sm-1">
-                      <i class="float-right my-auto h-100 glyphicon fas fa-2x fa-angle-down"></i>
+                      <i class="float-right my-auto h-100 glyphicon fas fa-2x fa-angle-down colorSecondary"></i>
                     </div>
                   </div>
                 </a>
@@ -274,6 +274,65 @@
                 </div>
               </div>
             </section>
+
+            <section class="areaCurriculum">
+              <h2>Competências e Habilidades</h2>
+
+              <table class="table text-center">
+                <tbody>
+                <tr class="d-flex">
+                    <td class="border-0 col-sm-4">Inglês <em>(Básico)</em></td>
+                    <td class="border-0 col-sm-4">Espanhol <em>(Básico)</em></td>
+                    <td class="border-0 col-sm-4">Web Design <em>(Básico)</em></td>
+                  </tr>
+                  <tr class="d-flex">
+                    <td class="col-sm-4">HTML5</td>
+                    <td class="col-sm-4">CSS3</td>
+                    <td class="col-sm-4">Javascript</td>
+                  </tr>
+                  <tr class="d-flex">
+                    <td class="col-sm-4">Bootstrap 4</td>
+                    <td class="col-sm-4">Sass</td>
+                    <td class="col-sm-4">jQuery</td>
+                  </tr>
+                  <tr class="d-flex">
+                    <td class="col-sm-4">PHP</td>
+                    <td class="col-sm-4">WordPress</td>
+                    <td class="col-sm-4">Git</td>
+                  </tr>
+                  <tr class="d-flex">
+                    <td class="col-sm-4">Photoshop</td>
+                    <td class="col-sm-4">GIMP</td>
+                    <td class="col-sm-4">Inkscape</td>
+                  </tr>
+                </tbody>
+              </table>
+            </section>
+
+            <section class="areaCurriculum">
+              <h2>Outros Interesses</h2>
+
+              <div class="row">
+                <div class="col-sm-6">
+                  <hr class="m-0 hrOther">
+                  <h3 class="font-weight-bold">Arte</h3>
+                  <p>
+                    O desenho sempre fez parte da minha vida, em certos momentos de forma mais séria e outros por diversão.
+                    Com isso, posso falar que arte é algo fundamental para mim e, mesmo tendo um pouco de vergonha, compartilho alguns desenhos no <strong><a href="https://www.instagram.com/eu.chico/" target="_blank">Instagram</a></strong>.
+                  </p>
+                </div>
+
+                <div class="col-sm-6">
+                  <hr class="m-0 hrOther">
+                  <h3 class="font-weight-bold">Blog</h3>
+                  <p>
+                    Eventualmente gosto de escrever alguns pensamentos e ideias pessoais, mas nunca “formalizei” e compartilhei.
+                    Vou organizar um blog no <strong><a href="https://medium.com/@euchico" target="_blank">Medium</a></strong> onde irei registrar minha trajetória de estudos e busca profissional na área de Desenvolvimento Web.
+                  </p>
+                </div>
+              </div>
+            </section>
+
           </div>
         </div>
       </div>
