Organização geral e ajustes finos

--- a/curriculum.html
+++ b/curriculum.html
@@ -4,22 +4,28 @@
     <!-- METAs -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- / METAs -->
 
     <!-- STYLEs -->
     <link rel="stylesheet" type="text/css" href="styles/normalize.css">
     <link rel="stylesheet" type="text/css" href="styles/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="styles/style.css">
+    <!-- / STYLEs -->
 
-    <!-- PRIORITY SCRIPTs -->
+    <!-- SCRIPTs PRIORITÁRIOS -->
     <script type="text/javascript" src="https://kit.fontawesome.com/2afad5831f.js"></script>
+    <!-- / SCRIPTs PRIORITÁRIOS -->
 
     <!-- FONTs -->
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,900&display=swap" rel="stylesheet">
+    <!-- / FONTs -->
 
     <title>euChico - Curriculum</title>
   </head>
   <body id="curriculum">
+    <!-- CONTEÚDO -->
     <main id="contentCurriculum" class="p-3">
+      <!-- NAVEGAÇÃO -->
       <nav class="navbar navbar-expand-md navbar-dark mb-4 p-0" id="navagation">
         <a class="abs" href="index.html"><h1 class="m-0 colorSecondary">euCHICO</h1></a>
 
@@ -30,23 +36,25 @@
         <div class="navbar-collapse collapse" id="collapsingNavbar">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item"><a class="nav-link colorSecondary" href="curriculum.html">curriculum</a></li>
-            <!-- <li class="nav-item"><a class="nav-link colorSecondary" href="#">blog</a></li>
-            <li class="nav-item"><a class="nav-link colorSecondary" href="#">contato</a></li> -->
+            <li class="nav-item"><a class="nav-link colorSecondary" href="https://medium.com/@euchico" target="_blank"><strong>blog</strong></a></li>
           </ul>
         </div>
       </nav>
+      <!-- / NAVEGAÇÃO -->
 
+      <!-- CONTEÚDO PRINCIPAL -->
       <div class="container">
         <div class="row">
-          <div class="col-lg-5 areaCard">
-            <div id="card">
-              <div class="avatar"><img src="images/avatar.jpg" alt=""></div>
+          <!-- CARD -->
+          <div class="col-lg-5 mb-4 text-center areaCard">
+            <div id="card" class="text-center">
+              <div class="avatar"><img src="images/euchico-perfil.jpg" alt="Perfil euChico"></div>
 
               <h2>Francisco de Paula</h2>
 
               <h3 class="colorSecondary">Desenvolvedor Web</h3>
 
-              <ul class="list-unstyled">
+              <ul class="list-unstyled mb-0">
                 <li class="list-inline-item"><a href="https://github.com/euchico" target="_blank"><i class="fab fa-github-square"></i></a></li>
                 <li class="list-inline-item"><a href="https://www.linkedin.com/in/euchico" target="_blank"><i class="fab fa-linkedin"></i></a></li>
                 <li class="list-inline-item"><a href="https://twitter.com/_euchico" target="_blank"><i class="fab fa-twitter-square"></i></a></li>
@@ -54,29 +62,31 @@
             </div>
 
             <div id="download">
-              <a href="files/curriculum.pdf" download>
-                <!-- <button type="button" class="btn btn-secondary btn-sm rounded-0">
+              <a href="files/curriculo-franciscodepaula.pdf" download>
+                <button type="button" class="btn btn-secondary btn-sm rounded-0">
                   <i class="fas fa-file-download"></i> download
-                </button> -->
+                </button>
               </a>
             </div>
           </div>
+          <!-- / CARD -->
 
+          <!-- CURRICULUM -->
           <div class="col-lg-7">
+            <!-- SEÇÃO 1: SOBRE MIM -->
             <section class="areaCurriculum">
               <h2>Sobre Mim</h2>
 
-              <strong class="colorSecondary">Olá Mundo!</strong>
               <p>
                 Sou um grande entusiasta de Programação e Desenvolvimento Web.
-                Curso Licenciatura em Matemática no IFRJ, cursei Ciência da Computação na UERJ (não concluído) e, além disso, realizo muitos estudos independentes.
+                Curso Licenciatura em Matemática no IFRJ, cursei Ciência da Computação na UERJ <em>(não concluído)</em> e, além disso, realizo muitos estudos independentes.
                 Sempre tive interesse em matemática, lógica, programação e encontrei a paixão pelos processos e modos de pensar dentro dessas áreas.
                 Ampliei a minha visão através do contato com outros campos, como design e arte, mas tudo unido para o meu desenvolvimento pessoal e profissional.
               </p>
 
               <hr>
 
-              <h3 class="colorSecondary">Informações Pessoais</h3>
+              <h3>Informações Pessoais</h3>
 
               <div class="row">
                 <div class="col-md-6">
@@ -96,15 +106,18 @@
                 </div>
               </div>
             </section>
+            <!-- / SEÇÃO 1: SOBRE MIM -->
 
+            <!-- SEÇÃO 2: EXPERIÊNCIAS -->
             <section class="areaCurriculum">
               <h2>Experiências</h2>
 
+              <!-- EXPERIÊNCIA 1 -->
               <div id="collapseInformation" class="">
                 <a href="#collapseDetail1" class="d-block h-100" data-toggle="collapse" data-parent="#collapseInformation">
                   <div class="row no-gutters">
                     <div class="col-sm-4 d-none d-sm-block">
-                      <span class="float-left collapseDate"><strong>2013 - 2014</strong></span>
+                      <span class="float-left collapseDate">2013 - 2014</span>
                     </div>
                     <div class="col-10 col-sm-7">
                       <div class="d-inline-block collapseTitle">
@@ -121,17 +134,19 @@
 
                 <div class="collapse" id="collapseDetail1">
                   <p class="pt-2">
-                    Minhas principais responsabilidades envolviam desenvolvimento front-end (HTML, CSS e Javascript), criação de templates e manutenção de sites em Wordpress, criação de layout para sistemas web e criação/edição de imagens.
+                    Minhas principais responsabilidades envolviam desenvolvimento front-end <em>(HTML, CSS e Javascript)</em>, criação de templates e manutenção de sites em Wordpress, criação de layout para sistemas web e criação/edição de imagens.
                     Além disso, participava diretamente das várias etapas de idealização e desenvolvimento dos projetos.
                   </p>
                 </div>
               </div>
+              <!-- / EXPERIÊNCIA 1 -->
 
+              <!-- EXPERIÊNCIA 2 -->
               <div id="collapseInformation" class="">
                 <a href="#collapseDetail2" class="d-block h-100" data-toggle="collapse" data-parent="#collapseInformation">
                   <div class="row no-gutters">
                     <div class="col-sm-4 d-none d-sm-block">
-                      <span class="float-left collapseDate"><strong>2011 - 2013</strong></span>
+                      <span class="float-left collapseDate">2011 - 2013</span>
                     </div>
 
                     <div class="col-10 col-sm-7">
@@ -155,12 +170,14 @@
                   </p>
                 </div>
               </div>
+              <!-- EXPERIÊNCIA 2 -->
 
+              <!-- EXPERIÊNCIA 3 -->
               <div id="collapseInformation" class="">
                 <a href="#collapseDetail3" class="d-block h-100" data-toggle="collapse" data-parent="#collapseInformation">
                   <div class="row no-gutters">
                     <div class="col-sm-4 d-none d-sm-block">
-                      <span class="float-left collapseDate"><strong>2010 - 2011</strong></span>
+                      <span class="float-left collapseDate">2010 - 2011</span>
                     </div>
 
                     <div class="col-10 col-sm-7">
@@ -185,23 +202,25 @@
                   </p>
                 </div>
               </div>
+              <!-- / EXPERIÊNCIA 3 -->
             </section>
+            <!-- / SEÇÃO 2: EXPERIÊNCIAS -->
 
-
+            <!-- SEÇÃO 3: FORMAÇÃO -->
             <section class="areaCurriculum">
               <h2>Formação</h2>
 
-              <div id="collapseInformation" class="">
+              <!-- FORMAÇÃO 1 -->
+              <div id="collapseInformation">
                 <a href="#collapseDetail4" class="d-block h-100" data-toggle="collapse" data-parent="#collapseInformation">
                   <div class="row no-gutters">
                     <div class="col-sm-4 d-none d-sm-block">
-                      <span class="float-left collapseDate"><strong>Presente</strong></span>
+                      <span class="float-left collapseDate">Presente</span>
                     </div>
 
                     <div class="col-10 col-sm-7">
                       <div class="d-inline-block collapseTitle">
                         <h4>Estudo Pessoal</h4>
-                        <!-- <span><strong>Estágio em Front-End</strong></span> -->
                       </div>
                     </div>
 
@@ -218,12 +237,14 @@
                   </p>
                 </div>
               </div>
+              <!-- / FORMAÇÃO 1 -->
 
-              <div id="collapseInformation" class="">
+              <!-- FORMAÇÃO 2 -->
+              <div id="collapseInformation">
                 <a href="#collapseDetail5" class="d-block h-100" data-toggle="collapse" data-parent="#collapseInformation">
                   <div class="row no-gutters">
                     <div class="col-sm-4 d-none d-sm-block">
-                      <span class="float-left collapseDate"><strong>2017 - Presente</strong></span>
+                      <span class="float-left collapseDate">2017 - Presente</span>
                     </div>
 
                     <div class="col-10 col-sm-7">
@@ -246,12 +267,14 @@
                   </p>
                 </div>
               </div>
+              <!-- / FORMAÇÃO 2 -->
 
-              <div id="collapseInformation" class="">
+              <!-- FORMAÇÃO 3 -->
+              <div id="collapseInformation">
                 <a href="#collapseDetail6" class="d-block h-100" data-toggle="collapse" data-parent="#collapseInformation">
                   <div class="row no-gutters">
                     <div class="col-sm-4 d-none d-sm-block">
-                      <span class="float-left collapseDate"><strong>Não Concluído</strong></span>
+                      <span class="float-left collapseDate">Não Concluído</span>
                     </div>
 
                     <div class="col-10 col-sm-7">
@@ -273,8 +296,11 @@
                   </p>
                 </div>
               </div>
+              <!-- / FORMAÇÃO 3 -->
             </section>
+            <!-- / SEÇÃO 3: FORMAÇÃO -->
 
+            <!-- SEÇÃO 4: COMPETÊNCIAS E HABILIDADES -->
             <section class="areaCurriculum">
               <h2>Competências e Habilidades</h2>
 
@@ -308,7 +334,9 @@
                 </tbody>
               </table>
             </section>
+            <!-- / SEÇÃO 4: COMPETÊNCIAS E HABILIDADES -->
 
+            <!-- SEÇÃO 5: OUTROS INTERESSES -->
             <section class="areaCurriculum">
               <h2>Outros Interesses</h2>
 
@@ -332,15 +360,19 @@
                 </div>
               </div>
             </section>
-
+            <!-- / SEÇÃO 5: OUTROS INTERESSES -->
           </div>
+          <!-- / CURRICULUM -->
         </div>
       </div>
+      <!-- / CONTEÚDO PRINCIPAL -->
     </main>
+    <!-- / CONTEÚDO -->
 
     <!-- SCRIPTs -->
     <script type="text/javascript" src="scripts/jquery-3.4.1.min.js"></script>
     <script type="text/javascript" src="scripts/bootstrap.min.js"></script>
     <script type="text/javascript" src="scripts/script.js"></script>
+    <!-- / SCRIPTs -->
   </body>
 </html>
