--- a/index.html
+++ b/index.html
@@ -4,19 +4,24 @@
     <!-- METAs -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- / METAs -->
 
     <!-- STYLEs -->
     <link rel="stylesheet" type="text/css" href="styles/normalize.css">
     <link rel="stylesheet" type="text/css" href="styles/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="styles/style.css">
+    <!-- / STYLEs -->
 
     <!-- FONTs -->
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,900&display=swap" rel="stylesheet">
+    <!-- / FONTs -->
 
     <title>euChico - Francisco de Paula</title>
   </head>
   <body id="home">
+    <!-- CONTEÚDO PRINCIPAL -->
     <main id="contentHome" class="p-3">
+      <!-- NAVEGAÇÃO -->
       <nav class="navbar navbar-expand-sm navbar-dark mb-4 p-0" id="navagation">
         <a class="abs" href="#"><h1 class="m-0">euCHICO</h1></a>
 
@@ -27,22 +32,26 @@
         <div class="navbar-collapse collapse" id="collapsingNavbar">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item"><a class="nav-link colorPrimary" href="curriculum.html">curriculum</a></li>
-            <!-- <li class="nav-item"><a class="nav-link colorPrimary" href="#">blog</a></li>
-            <li class="nav-item"><a class="nav-link colorPrimary" href="#">contato</a></li> -->
+            <li class="nav-item"><a class="nav-link colorPrimary" href="https://medium.com/@euchico" target="_blank"><strong>blog</strong></a></li>
           </ul>
         </div>
       </nav>
+      <!-- / NAVEGAÇÃO -->
 
-      <div id="title" >
+      <!-- TÍTULO E SUBTÍTULO -->
+      <div id="title">
         <h3 id="titleQuote" class="m-0"></h3>
         <h2 id="titleMain" class="m-0"></h2>
       </div>
+      <!-- / TÍTULO E SUBTÍTULO -->
     </main>
+    <!-- / CONTEÚDO PRINCIPAL -->
 
     <!-- SCRIPTs -->
     <script type="text/javascript" src="scripts/jquery-3.4.1.min.js"></script>
     <script type="text/javascript" src="scripts/bootstrap.min.js"></script>
     <script type="text/javascript" src="scripts/typed.js"></script>
     <script type="text/javascript" src="scripts/script.js"></script>
+    <!-- / SCRIPTs -->
   </body>
 </html>
