Ajustes mobile e de texto

--- a/curriculum.html
+++ b/curriculum.html
@@ -78,7 +78,7 @@
               <h2>Sobre Mim</h2>
 
               <p>
-                Sou um grande entusiasta de Programação e Desenvolvimento Web.
+                Sou um grande admirador da Programação e Desenvolvimento Web.
                 Curso Licenciatura em Matemática no IFRJ, cursei Ciência da Computação na UERJ <em>(não concluído)</em> e, além disso, realizo muitos estudos independentes.
                 Sempre tive interesse em matemática, lógica, programação e encontrei a paixão pelos processos e modos de pensar dentro dessas áreas.
                 Ampliei a minha visão através do contato com outros campos, como design e arte, mas tudo unido para o meu desenvolvimento pessoal e profissional.
@@ -309,27 +309,27 @@
                 <tr class="d-flex">
                     <td class="border-0 col-sm-4">Inglês <em>(Básico)</em></td>
                     <td class="border-0 col-sm-4">Espanhol <em>(Básico)</em></td>
-                    <td class="border-0 col-sm-4">Web Design <em>(Básico)</em></td>
+                    <td class="border-0 col-sm-4  d-none d-sm-block">Web Design <em>(Básico)</em></td>
                   </tr>
                   <tr class="d-flex">
                     <td class="col-sm-4">HTML5</td>
                     <td class="col-sm-4">CSS3</td>
-                    <td class="col-sm-4">Javascript</td>
+                    <td class="col-sm-4  d-none d-sm-block">Javascript</td>
                   </tr>
                   <tr class="d-flex">
                     <td class="col-sm-4">Bootstrap 4</td>
                     <td class="col-sm-4">Sass</td>
-                    <td class="col-sm-4">jQuery</td>
+                    <td class="col-sm-4  d-none d-sm-block">jQuery</td>
                   </tr>
                   <tr class="d-flex">
                     <td class="col-sm-4">PHP</td>
                     <td class="col-sm-4">WordPress</td>
-                    <td class="col-sm-4">Git</td>
+                    <td class="col-sm-4  d-none d-sm-block">Git</td>
                   </tr>
                   <tr class="d-flex">
                     <td class="col-sm-4">Photoshop</td>
                     <td class="col-sm-4">GIMP</td>
-                    <td class="col-sm-4">Inkscape</td>
+                    <td class="col-sm-4 d-none d-sm-block">Inkscape</td>
                   </tr>
                 </tbody>
               </table>
@@ -346,7 +346,7 @@
                   <h3 class="font-weight-bold">Arte</h3>
                   <p>
                     O desenho sempre fez parte da minha vida, em certos momentos de forma mais séria e outros por diversão.
-                    Com isso, posso falar que arte é algo fundamental para mim e, mesmo tendo um pouco de vergonha, compartilho alguns desenhos no <strong><a href="https://www.instagram.com/eu.chico/" target="_blank">Instagram</a></strong>.
+                    Com isso, posso falar que arte é algo fundamental para mim e, mesmo tendo um pouco de receio, compartilho alguns desenhos no <strong><a href="https://www.instagram.com/eu.chico/" target="_blank">Instagram</a></strong>.
                   </p>
                 </div>
 
@@ -354,7 +354,7 @@
                   <hr class="m-0 hrOther">
                   <h3 class="font-weight-bold">Blog</h3>
                   <p>
-                    Eventualmente gosto de escrever alguns pensamentos e ideias pessoais, mas nunca “formalizei” e compartilhei.
+                    Eventualmente gosto de escrever alguns pensamentos e ideias pessoais, mas nunca “formalizei” ou compartilhei.
                     Vou organizar um blog no <strong><a href="https://medium.com/@euchico" target="_blank">Medium</a></strong> onde irei registrar minha trajetória de estudos e busca profissional na área de Desenvolvimento Web.
                   </p>
                 </div>
