Recomeço do desenvolvimento do projeto

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+<html lang="pt-br">
   <head>
     <!-- METAs -->
     <meta charset="utf-8">
@@ -12,36 +13,16 @@
     <link rel="stylesheet" type="text/css" href="styles/style.css">
     <!-- / STYLEs -->
 
-    <!-- FONTs -->
-    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,900&display=swap" rel="stylesheet">
-    <!-- / FONTs -->
-
     <title>euChico - Francisco de Paula</title>
   </head>
-  <body id="home">
+
+  <body>
     <!-- CONTEÚDO PRINCIPAL -->
-    <main id="contentHome" class="p-3">
-      <!-- NAVEGAÇÃO -->
-      <nav class="navbar navbar-expand-sm navbar-dark mb-4 p-0" id="navagation">
-        <a class="abs" href="#"><h1 class="m-0">euCHICO</h1></a>
-
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsingNavbar">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-
-        <div class="navbar-collapse collapse" id="collapsingNavbar">
-          <ul class="navbar-nav ml-auto">
-            <li class="nav-item"><a class="nav-link colorPrimary" href="curriculum.html">curriculum</a></li>
-            <li class="nav-item"><a class="nav-link colorPrimary" href="https://medium.com/@euchico" target="_blank"><strong>blog</strong></a></li>
-          </ul>
-        </div>
-      </nav>
-      <!-- / NAVEGAÇÃO -->
-
+    <main class="p-3">
       <!-- TÍTULO E SUBTÍTULO -->
       <div id="title">
-        <h3 id="titleQuote" class="m-0"></h3>
-        <h2 id="titleMain" class="m-0"></h2>
+        <h2 id="titleQuote" class="m-0"></h2>
+        <h1 id="titleMain" class="m-0"></h1>
       </div>
       <!-- / TÍTULO E SUBTÍTULO -->
     </main>
